services/kube-services/registry-v2/registry.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:default:registry"]'
    external-dns.alpha.kubernetes.io/hostname: registry.external-dns.cambae.io
  name: registry-service
  labels:
    run: registry-service
spec:
  ports:
  - port: 5000
    protocol: TCP
  selector:
    run: registry-service
